# agente-IA-codex

./: README.md  requirements.txt
app/: main.py
app/core/: logging.py  schemas.py  storage.py
app/dashboard/templates/: index.html
app/trading/: agent.py  backtest.py  binance_client.py  datafeed.py
app/trading/rl/: environment.py
app/trading/strategies/: base.py  fvg.py  liquidity.py  market_structure.py  moving_average.py  order_blocks.py  rsi_divergence.py  turtle_soup.py
mexc_smc_ai/: .env.example  README.md  config.yaml  pyproject.toml  requirements.txt
mexc_smc_ai/app/: main.py
mexc_smc_ai/app/ai/: decision.py  features.py  model.py
mexc_smc_ai/app/core/: config.py  logger.py  models.py  state.py
mexc_smc_ai/app/data/: feed.py  mexc_client.py  storage.py
mexc_smc_ai/app/engine/: execution.py  paper_broker.py  scheduler.py  signal_engine.py
mexc_smc_ai/app/indicators/: atr.py  divergence.py  pivots.py  rsi.py  volume.py
mexc_smc_ai/app/risk/: position_sizing.py  rules.py  trailing.py
mexc_smc_ai/app/smc/: bias.py  confluence.py  order_blocks.py
mexc_smc_ai/app/ui/: streamlit_app.py
mexc_smc_ai/app/ui/pages/: 1_home.py  2_config.py  3_signals.py  4_paper_trades.py  5_logs.py
mexc_smc_ai/tests/: test_divergence.py  test_order_blocks.py  test_pivots.py
